# cod-gdal

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cod-gdal-AutoDeployTrigger-16d051fb-58c1-4335-b83d-869d9796fc19.yml
app/: __init__.py
app/routers/: ogr2ogr.py
